fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -242,7 +242,7 @@ body {
 	font-size: var(--fs-xxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	margin-top: 3em;
+	margin-top: 2em;
 	margin-bottom: 0;
 }
 
@@ -539,7 +539,7 @@ body {
 	font-size: var(--fs-xxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	margin-top: 3em;
+	margin-top: 2em;
 	margin-bottom: 0;
 }
 
@@ -571,7 +571,7 @@ body {
 	font-size: var(--fs-xxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	margin-top: 3em;
+	margin-top: 2em;
 	margin-bottom: 0;
 }
 
@@ -607,13 +607,13 @@ body {
 	font-size: var(--fs-xxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	margin-top: 3em;
+	margin-top: 2em;
 	margin-bottom: 0;
 }
 
 .contact-description {
 	text-align: center;
-	width: 28em;
+	width: 27em;
 	margin-bottom: 3em;
 	padding-left: 2em;
 	padding-right: 2em;
@@ -837,7 +837,7 @@ body {
 	font-size: var(--fs-xxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	margin-top: 3em;
+	margin-top: 2em;
 	margin-bottom: 0;
 }
 
